Fixed responsiveness on mobile, fixed links for fonts to make validate.

--- a/petfinder/css/styles.css
+++ b/petfinder/css/styles.css
@@ -1,4 +1,3 @@
-89@charset "UTF-8";
 /* CSS Document */
 
 html, body {height: 100%}
@@ -9,7 +8,7 @@ body{
 	background-size: cover;
 	background-attachment: fixed;
 	font-family: 'Open Sans', sans-serif;
-	font-weight: 300;
+	font-weight: 300; 
 }
 
 
